@@ -447,6 +447,7 @@ allow_voting_help					If set to 1, voting will be allowed for players.
 allow_voting_spectator_help			If set to 1, voting will be allowed for spectators.
 min_voters_help						Number of voters that need to be online to enable voting.
 max_votes_help                      The maximum number of total votes that can be active at any given moment.
+votes_cancel_help                   Cancels all running polls.
 max_votes_per_voter_help            The maximum number of votes suggested by each voter that can be active at any given moment.
 voting_start_decay_help				Number of seconds after that the non-voters start to get ignored.
 voting_decay_help					One non-voter is ignored everytime this many secons pass.
@@ -2178,6 +2179,7 @@ gamestate_winner_humans		Humans.
 instant_win_activated		Instant win zone activated! Enter it to win the round.\n
 instant_death_activated		Death zone activated! Avoid it!\n
 
+player_admin_kill			\1 0xRESETTwas smitten by an administrator.\n
 player_win_instant			\1 was awarded \2 points for hitting the instant win zone.\n
 player_win_conquest			\1 was awarded \2 points for conquering the enemy base.\n
 player_win_held_fortress	\1 was awarded \2 points for holding the base.\n
@@ -2420,6 +2422,7 @@ network_ban_noreason        None given.
 vote_accepted						Poll "\1" has been accepted. (\2 Players voted for the poll, \3 against, \4 didn't vote)\n
 vote_rejected						Poll "\1" has been rejected. (\2 Players voted for the poll, \3 against, \4 didn't vote)\n
 vote_timeout						Poll "\1" timed out.\n
+vote_cancel_all                     All polls have been canceled by an administrator.\n
 vote_new							New poll: "\1". Enter the main menu vote on it.\n
 vote_redundant                      Poll rejected, same suggestion was made already.\n
 vote_maturity                       Poll rejected, you're not old enough to issue votes, wait \1 seconds.\n
